# pid-learning-lab

./: .gitignore  .project  README.md
01-onoff_control/: .mxproject  01-onoff_control.ioc  CMakeLists.txt  README.md
01-onoff_control/Core/Inc/: led_pwm.h  photocell.h
01-onoff_control/Core/Src/: led_pwm.c  logger.c  main.c  photocell.c
01-onoff_control/cmake/stm32cubemx/: CMakeLists.txt
02-proportional-control/: .clangd  02-proportional-control.ioc  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json
02-proportional-control-v01/: .project  02-proportional-control-v01.ioc  02-proportional-control-v01.launch
02-proportional-control-v01/Debug/: 02-proportional-control-v01.list  02-proportional-control-v01.map  objects.list
03-pi-control/: .mxproject  CMakeLists.txt  PI-Control_CMake_CMSIS.ioc
03-pi-control-v01/: .cproject  .mxproject  .project  03-pi-control-v2.launch
03-pi-control-v01/Debug/: 02-proportional-control-v01.list  02-proportional-control-v01.map  03-pi-control-v2.list  03-pi-control-v2.map  makefile
03-pi-control-v02/: .cproject  .mxproject  .project  03-pi-control-v02.ioc  03-pi-control-v02.launch
03-pi-control-v02/Debug/: 03-pi-control-v02.list  03-pi-control-v02.map  makefile  objects.list
03-pi-control/cmake/: gcc-arm-none-eabi.cmake
03-pi_control/: .mxproject  03-pi_control.ioc  CMakeLists.txt
PI-Control/: .mxproject  CMakeLists.txt  PI-Control.ioc
PI-Control/Core/Src/: main.c  (+3 more)
tests/: CMakeLists.txt  pid_test.c
uart_plotter/: .gitignore  USAGE.md  requirements.txt  uart_plot.py
(+209 files in other folders)
